# MangoMobileRobot

./: .gitignore  README.md
MotorControlwithMicroROS/: .cproject  .mxproject  .project  MotorControlwithMicroROS Debug.launch  MotorControlwithMicroROS.ioc  STM32F756XX_FLASH.ld
MotorControlwithMicroROS/Debug/: MotorControlwithMicroROS.elf  objects.list  sources.mk  (+2 more)
diffdrive_ws/src/mango_teleop/: package.xml  setup.cfg  setup.py
diffdrive_ws/src/mango_teleop/config/: teleop.yaml
diffdrive_ws/src/mango_teleop/launch/: joy_teleop.launch.py
microros_esp32_publisher/: PID_TocDo.cpp  PWM_DIR.cpp  microros_link_esp32.ino
microros_link_esp32/: Encoder_Xuly.cpp
motor_control_using_esp32/: .DieuKhienDongCoPID_v1_2.ino.swp  Tien_ich.h  Tinh_toan_TocDoGoc.cpp  motor_control_using_esp32.ino
ui/: main.py
view_robot_pkg/view_robot_pkg/: README.md  package.xml  setup.cfg  setup.py
view_robot_pkg/view_robot_pkg/config/: ekf.yaml  joint_controller.yaml  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml
view_robot_pkg/view_robot_pkg/launch/: joystick.launch.py  launch_sim.launch.py  online_sync_launch.py  view_robot.launch.py  zackoi_localization.launch.py  zackoi_navigation_launch.py  zackon_synthesis.launch.py
view_robot_pkg/view_robot_pkg/maps/: house_khoi.pgm  house_khoi.yaml  khoi_house_sofa_map.data  khoi_map.pgm  khoi_map.yaml  khoi_sofa_map.pgm  khoi_sofa_map.yaml
view_robot_pkg/view_robot_pkg/meshes/: left_casterwheel_after_Link.STL  left_casterwheel_before_Link.STL  leftwheel_Link.STL  right_casterwheel_after_Link.STL  right_casterwheel_before_Link.STL  rightwheel_Link.STL
view_robot_pkg/view_robot_pkg/rviz/: default_view.rviz  zackon_view.rviz
view_robot_pkg/view_robot_pkg/urdf/: robot_description.urdf
view_robot_pkg/view_robot_pkg/view_robot_pkg/: fake_diff_drive.py  odom_frame_publisher.py  odom_tf_broadcaster.py  teleop_node.py
(+508 files in other folders)
